--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -7,6 +7,12 @@
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
   <p>
+    <%= event.description %>
+  </p>
+  </td>
+
+  <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+  <p>
     <%= event.start_time %>
   </p>
   </td>
