--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,9 +2,11 @@
 
 <div class="flex flex-wrap my-12 items-center">
   <h1 class="font-bold text-4xl text-blue-500">Events</h1>
-  <button class="bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-12">
-    <%= link_to "+ New event", new_event_path %>
-  </div>
+  <%= link_to new_event_path do %>
+    <button class="bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-12">
+      + New event
+    </button>
+  <% end %>
 </div>
 
 
@@ -13,6 +15,7 @@
     <thead>
       <tr>
         <th class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Type</th>
+        <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Description</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Start time</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Duration</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Fixed</th>
