add styling, update seeds

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,5 @@
+<p style="color: green" class="mb-20"><%= notice %></p>
+
 <table class="border-collapse table-auto w-full text-sm">
     <thead>
       <tr>
