change form field type

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="px-3 mb-2">
         <%= form.label :description, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-        <%= form.text_field :description, style: "width:500px;height:250px", class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+        <%= form.text_area :description, style: "width:500px;height:250px", class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
       <div class="md:w-1/2 px-3 mb-2">
         <%= form.label :start_time, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
