--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -23,7 +23,26 @@
       </tr>
     </thead>
     <tbody class="bg-white dark:bg-slate-800">
-      <% @events.each do |event| %>
+      <% @events.each_with_index do |event, i| %> 
+        <% if event.start_time > event.start_time.beginning_of_day && (@events[i-1].start_time < event.start_time.beginning_of_day || @events[i-1].start_time.to_datetime == @events[i-1].start_time.beginning_of_day) %>
+          <tr class=" bg-sky-500/100">
+            <div class="my-2 bg-sky-500/100">
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-black text-xl">
+                <%= event.start_time.strftime("%A") %>
+              </td>
+              <td class="border-b border-slate-100 dark:border-slate-700">
+              </td>
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
+              </td>
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
+              </td>
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
+              </td>
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
+              </td>
+            </div>
+          </tr>
+        <% end %>
         <tr>
           <div class="my-2">
             <%= render event %>
