--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -30,9 +30,10 @@
               <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-black text-xl">
                 <%= event.start_time.strftime("%A") %>
               </td>
-              <td class="border-b border-slate-100 dark:border-slate-700">
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4">
+                <%= event.start_time.to_date %> (KW <%= event.start_time.strftime('%V') %>)
               </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
               </td>
               <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
               </td>
