--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,12 +1,29 @@
 <p style="color: green"><%= notice %></p>
 
-<div class="flex flex-wrap my-12 items-center">
-  <h1 class="font-bold text-4xl text-blue-500">Events</h1>
-  <%= link_to new_event_path do %>
-    <button class="bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-12">
-      + New event
+<div class="flex items-center justify-between flex-wrap">
+  <div class="flex flex-wrap my-12 items-center">
+    <h1 class="font-bold text-4xl text-blue-500">Events</h1>
+    <%= link_to new_event_path do %>
+      <button class="bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-12">
+        + New event
+      </button>
+    <% end %>
+  </div>
+
+  <div>
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded">
+      <span class="material-symbols-outlined inline-block align-middle" title="Ansicht Tag">calendar_today</span>
     </button>
-  <% end %>
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded">
+      <span class="material-symbols-outlined inline-block align-middle" title="Ansicht Woche">calendar_view_week</span>
+    </button>
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded">
+      <span class="material-symbols-outlined inline-block align-middle" title="Ansicht Monat">calendar_month</span>
+    </button>
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded">
+      <p class="inline-block align-middle" title="Ansicht dieses Jahr"><%= Date.today.year %></p>
+    </button>
+  </div>
 </div>
 
 
