--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,13 +12,13 @@
 
   <div>
     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded">
-      <span class="material-symbols-outlined inline-block align-middle" title="Ansicht Tag">calendar_today</span>
+      <span class="material-symbols-outlined inline-block align-middle" title="Ansicht heute">calendar_today</span>
     </button>
     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded">
-      <span class="material-symbols-outlined inline-block align-middle" title="Ansicht Woche">calendar_view_week</span>
+      <span class="material-symbols-outlined inline-block align-middle" title="Ansicht diese Woche">calendar_view_week</span>
     </button>
     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded">
-      <span class="material-symbols-outlined inline-block align-middle" title="Ansicht Monat">calendar_month</span>
+      <span class="material-symbols-outlined inline-block align-middle" title="Ansicht dieser Monat">calendar_month</span>
     </button>
     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded">
       <p class="inline-block align-middle" title="Ansicht dieses Jahr"><%= Date.today.year %></p>
@@ -26,52 +26,8 @@
   </div>
 </div>
 
-
-<div id="events">
-  <table class="border-collapse table-auto w-full text-sm">
-    <thead>
-      <tr>
-        <th class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Type</th>
-        <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Description</th>
-        <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Start time</th>
-        <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Duration</th>
-        <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Fixed</th>
-        <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Action</th>
-      </tr>
-    </thead>
-    <tbody class="bg-white dark:bg-slate-800">
-      <% @events.each_with_index do |event, i| %> 
-        <% if event.start_time > event.start_time.beginning_of_day && (@events[i-1].start_time < event.start_time.beginning_of_day || @events[i-1].start_time.to_datetime == @events[i-1].start_time.beginning_of_day) %>
-          <tr class=" bg-sky-500/100">
-            <div class="my-2 bg-sky-500/100">
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-black text-xl">
-                <%= event.start_time.strftime("%A") %>
-              </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4">
-                <%= event.start_time.to_date %> (KW <%= event.start_time.strftime('%V') %>)
-              </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
-              </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
-              </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
-              </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
-              </td>
-            </div>
-          </tr>
-        <% end %>
-        <tr>
-          <div class="my-2">
-            <%= render event %>
-            <td class="border-b border-slate-100 dark:border-slate-700 p-4 pr-8 text-slate-500 dark:text-slate-400">
-              <p>
-                <%= link_to "Show this event", event %>
-              </p>
-            </td>
-          </div>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+<% if @view == "view_today" %>
+  <%= render "view_today", events: @events %>
+<% elsif @view == "view_this_week" %>
+  <%= render "view_this_week", events: @events %>
+<% end %>
