--- a/app/views/events/_view_today.html.erb
+++ b/app/views/events/_view_today.html.erb
@@ -11,6 +11,24 @@
       </tr>
     </thead>
     <tbody class="bg-white dark:bg-slate-800">
+      <tr class=" bg-sky-500/100">
+        <div class="my-2 bg-sky-500/100">
+          <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-black text-xl">
+            <%= Date.today.strftime("%A") %>
+          </td>
+          <td class="border-b border-slate-100 dark:border-slate-700 p-4">
+            <%= Date.today.to_date %> (KW <%= Date.today.strftime('%V') %>)
+          </td>
+          <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
+          </td>
+          <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
+          </td>
+          <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
+          </td>
+          <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
+          </td>
+        </div>
+      </tr>
       <% events.each_with_index do |event, i| %> 
         <% if event.start_time >= event.start_time.beginning_of_day && @events[i-1].start_time < event.start_time.beginning_of_day %>
           <tr class=" bg-sky-500/100">
