--- a/app/views/events/_view_today.html.erb
+++ b/app/views/events/_view_today.html.erb
@@ -19,14 +19,10 @@
           <td class="border-b border-slate-100 dark:border-slate-700 p-4">
             <%= Date.today.to_date %> (KW <%= Date.today.strftime('%V') %>)
           </td>
-          <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
-          </td>
-          <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
-          </td>
-          <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
-          </td>
-          <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
-          </td>
+          <% 4.times do %>
+            <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
+            </td>
+          <% end %>
         </div>
       </tr>
       <% events.each_with_index do |event, i| %> 
@@ -39,14 +35,10 @@
               <td class="border-b border-slate-100 dark:border-slate-700 p-4">
                 <%= event.start_time.to_date %> (KW <%= event.start_time.strftime('%V') %>)
               </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
-              </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
-              </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
-              </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
-              </td>
+              <% 4.times do %>
+                <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
+                </td>
+              <% end %>
             </div>
           </tr>
         <% end %>
