--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="font-bold text-4xl text-blue-500 mb-10">New event</h1>
+<h1 class="font-bold text-4xl text-blue-500 mb-10">Neuer Kalendereintrag</h1>
 
 <%= render "form", event: @event %>
 
@@ -6,6 +6,6 @@
 
 <%= link_to events_path do %>
   <button class="mx-3 bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
-    Back to events
+    Zurück zum Kalender
   </button>
 <% end %>
