--- a/app/views/events/_view_this_week.html.erb
+++ b/app/views/events/_view_this_week.html.erb
@@ -2,6 +2,7 @@
   <div style="background-position:10px 10px" class="absolute inset-0 bg-grid-slate-100 dark:bg-grid-slate-700/25">
   </div>
   <div class="relative rounded-xl overflow-auto p-8">
+    <div class="pb-4 text-xl">KW <%= Date.today.strftime('%V') %></div>
     <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">      
         <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
           <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(:monday).strftime("%A %d.%m") %></p>
