update according to new/changed attributes, translate

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -14,8 +14,12 @@
   <form class="w-40">
     <div class="flex flex-wrap flex-col -mx-3 mb-2">
       <div class="px-3 mb-2">
-        <%= form.label :type, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-        <%= form.text_field :type, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+        <%= form.label :title, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+        <%= form.text_field :title, required: true, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+      </div>
+      <div class="px-3 mb-2">
+        <%= form.label :kind, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+        <%= form.text_field :kind, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
       <div class="px-3 mb-2">
         <%= form.label :description, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
@@ -23,11 +27,11 @@
       </div>
       <div class="md:w-1/2 px-3 mb-2">
         <%= form.label :start_time, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
-        <%= form.datetime_field :start_time, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+        <%= form.datetime_field :start_time, required: true, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
       <div class="px-3 mb-2">
         <%= form.label :duration, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-        <%= form.number_field :duration, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+        <%= form.number_field :duration, required: true, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
       <div class="md:w-1/3 px-3 mb-2">
         <%= form.label :fixed, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
