--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,7 +3,8 @@
 <table class="border-collapse table-auto w-full text-sm">
     <thead>
       <tr>
-        <th class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Type</th>
+        <th class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Titel</th>
+        <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Kind</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Description</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Start time</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Duration</th>
@@ -16,13 +17,19 @@
         <div id="<%= dom_id @event %>">
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
             <p>
-              <%= @event.type || "Event" %>
+              <%= @event.title %>
+            </p>
+          </td>
+          
+          <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+            <p>
+              <%= @event.kind || "Event" %>
             </p>
           </td>
 
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
             <p>
-              <%= @event.description %>
+              <%= @event.description || "-" %>
             </p>
           </td>
 
@@ -44,8 +51,8 @@
             </p>
           </td>
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
-            <%= link_to "Edit this event", edit_event_path(@event), class: "underline" %>
-            <%= button_to "Destroy this event", @event, method: :delete, class: "underline text-left" %>
+            <%= link_to "Eintrag editieren", edit_event_path(@event), class: "underline" %>
+            <%= button_to "Eintrag löschen", @event, method: :delete, class: "underline text-left" %>
           </td>     
         </div>
       </tr>
@@ -54,6 +61,6 @@
 
 <%= link_to events_path do %>
   <button class="bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded mt-12">
-    Back to events
+    Zurück zum Kalender
   </button>
 <% end %>
