--- a/app/views/events/_view_this_week.html.erb
+++ b/app/views/events/_view_this_week.html.erb
@@ -5,7 +5,7 @@
     <div class="pb-4 text-xl">KW <%= Date.today.strftime('%V') %></div>
     <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">      
         <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
-          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(:monday).strftime("%A %d.%m") %></p>
+          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.strftime("%A %d.%m") %></p>
           <% events.where(start_time: Date.today.beginning_of_week.beginning_of_day..Date.today.beginning_of_week.end_of_day).each do |event| %>
             <p>
               <%= event.start_time.strftime('%H:%M') %>:
