--- a/app/views/events/_view_this_week.html.erb
+++ b/app/views/events/_view_this_week.html.erb
@@ -4,69 +4,26 @@
   <div class="relative rounded-xl overflow-auto p-8">
     <div class="pb-4 text-xl">KW <%= Date.today.strftime('%V') %></div>
     <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">      
+      <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
+        <p class="text-lg pb-4"><%= Date.today.beginning_of_week.strftime("%A %d.%m") %></p>
+        <% events.where(start_time: Date.today.beginning_of_week.beginning_of_day..Date.today.beginning_of_week.end_of_day).each do |event| %>
+          <p>
+            <%= event.start_time.strftime('%H:%M') %>:
+            <%= event.title %>
+          </p>
+        <% end %>    
+      </div>
+      <% [:tuesday, :wednesday, :thursday, :friday, :saturday, :sunday].each do |day| %>
         <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
-          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.strftime("%A %d.%m") %></p>
-          <% events.where(start_time: Date.today.beginning_of_week.beginning_of_day..Date.today.beginning_of_week.end_of_day).each do |event| %>
-            <p>
-              <%= event.start_time.strftime('%H:%M') %>:
-              <%= event.title %>
-            </p>
-          <% end %>    
-        </div>
-        <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
-          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(:tuesday).strftime("%A %d.%m") %></p>
-          <% events.where(start_time: Date.today.beginning_of_week.next_occurring(:tuesday).beginning_of_day..Date.today.beginning_of_week.next_occurring(:tuesday).end_of_day).each do |event| %>
-            <p>
-              <%= event.start_time.strftime('%H:%M') %>:
-              <%= event.title %>
-            </p>
-          <% end %>
-        </div>
-        <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
-          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(:wednesday).strftime("%A %d.%m") %></p>
-          <% events.where(start_time: Date.today.beginning_of_week.next_occurring(:wednesday).beginning_of_day..Date.today.beginning_of_week.next_occurring(:wednesday).end_of_day).each do |event| %>
-            <p>
-              <%= event.start_time.strftime('%H:%M') %>:
-              <%= event.title %>
-            </p>
-          <% end %>
-        </div>
-        <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
-          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(:thursday).strftime("%A %d.%m") %></p>
-          <% events.where(start_time: Date.today.beginning_of_week.next_occurring(:thursday).beginning_of_day..Date.today.beginning_of_week.next_occurring(:thursday).end_of_day).each do |event| %>
-            <p>
-              <%= event.start_time.strftime('%H:%M') %>:
-              <%= event.title %>
-            </p>
-          <% end %>
-        </div>
-        <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
-          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(:friday).strftime("%A %d.%m") %></p>
-          <% events.where(start_time: Date.today.beginning_of_week.next_occurring(:friday).beginning_of_day..Date.today.beginning_of_week.next_occurring(:friday).end_of_day).each do |event| %>
-            <p>
-              <%= event.start_time.strftime('%H:%M') %>:
-              <%= event.title %>
-            </p>
-          <% end %>
-        </div>
-        <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
-          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(:saturday).strftime("%A %d.%m") %></p>
-          <% events.where(start_time: Date.today.beginning_of_week.next_occurring(:saturday).beginning_of_day..Date.today.beginning_of_week.next_occurring(:saturday).end_of_day).each do |event| %>
-            <p>
-              <%= event.start_time.strftime('%H:%M') %>:
-              <%= event.title %>
-            </p>
-          <% end %>
-        </div>
-        <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
-          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(:sunday).strftime("%A %d.%m") %></p>
-          <% events.where(start_time: Date.today.beginning_of_week.next_occurring(:sunday).beginning_of_day..Date.today.beginning_of_week.next_occurring(:sunday).end_of_day).each do |event| %>
+          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(day).strftime("%A %d.%m") %></p>
+          <% events.where(start_time: Date.today.beginning_of_week.next_occurring(day).beginning_of_day..Date.today.beginning_of_week.next_occurring(day).end_of_day).each do |event| %>
             <p>
               <%= event.start_time.strftime('%H:%M') %>:
               <%= link_to event.title, event_path(event), class: "underline" %>
             </p>
           <% end %>
         </div>
+      <% end %>
     </div>
   </div>
   <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5">
