add remaining months

--- a/app/views/events/_view_this_month.html.erb
+++ b/app/views/events/_view_this_month.html.erb
@@ -12,7 +12,7 @@
               <%= event.start_time.strftime('%H:%M') %>:
               <%= event.title %>
             </p>
-          <% end %>      
+          <% end %>
         </div>
       <% end %>
     </div>
@@ -20,3 +20,28 @@
   <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5">
   </div>
 </div>
+
+<% (Date.today.month+1..12).each do |number_of_month| %>
+  <div class="not-prose relative bg-slate-50 rounded-xl overflow-hidden dark:bg-slate-800/25 mt-4">
+    <div style="background-position:10px 10px" class="absolute inset-0 bg-grid-slate-100 dark:bg-grid-slate-700/25">
+    </div>
+    <div class="relative rounded-xl overflow-auto p-8">
+      <div class="pb-4 text-xl"><%= Date.new(Date.today.year, number_of_month, 1).strftime("%B") %></div>
+      <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
+        <% Time.days_in_month(Date.new(Date.today.year, number_of_month, 1).month, Time.now.year).times do |i| %>
+          <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
+            <p class="text-lg pb-4"><%= Date.new(Time.now.year, number_of_month, i+1).strftime("%A %d.%m") %></p>
+            <% events.where(start_time: Date.new(Time.now.year, number_of_month, i+1).beginning_of_day..Date.new(Time.now.year, number_of_month, i+1).end_of_day).each do |event| %>
+              <p>
+                <%= event.start_time.strftime('%H:%M') %>:
+                <%= event.title %>
+              </p>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5">
+    </div>
+  </div>
+<% end %>
