--- a/app/views/events/_view_this_week.html.erb
+++ b/app/views/events/_view_this_week.html.erb
@@ -27,37 +27,39 @@
     </div>
   </div>
   <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5">
+  </div>  
 </div>
 
 <% (Date.today.cweek+1..52).each do |number_of_week| %>
-  <div class="not-prose relative bg-slate-50 rounded-xl overflow-hidden dark:bg-slate-800/25">
-  <div style="background-position:10px 10px" class="absolute inset-0 bg-grid-slate-100 dark:bg-grid-slate-700/25">
-  </div>
-  <div class="relative rounded-xl overflow-auto p-8">
-    <div class="pb-4 text-xl">KW <%= number_of_week %></div>
-    <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">      
-      <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
-        <p class="text-lg pb-4"><%= Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.strftime("%A %d.%m") %></p>
-        <% events.where(start_time: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.beginning_of_day..Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.end_of_day).each do |event| %>
-          <p>
-            <%= event.start_time.strftime('%H:%M') %>:
-            <%= event.title %>
-          </p>
-        <% end %>    
-      </div>
-      <% [:tuesday, :wednesday, :thursday, :friday, :saturday, :sunday].each do |day| %>
+  <div class="not-prose relative bg-slate-50 rounded-xl overflow-hidden dark:bg-slate-800/25 mt-4">
+    <div style="background-position:10px 10px" class="absolute inset-0 bg-grid-slate-100 dark:bg-grid-slate-700/25">
+    </div>
+    <div class="relative rounded-xl overflow-auto p-8">
+      <div class="pb-4 text-xl">KW <%= number_of_week %></div>
+      <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">      
         <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
-          <p class="text-lg pb-4"><%= Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).strftime("%A %d.%m") %></p>
-          <% events.where(start_time: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).beginning_of_day..Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).end_of_day).each do |event| %>
+          <p class="text-lg pb-4"><%= Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.strftime("%A %d.%m") %></p>
+          <% events.where(start_time: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.beginning_of_day..Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.end_of_day).each do |event| %>
             <p>
               <%= event.start_time.strftime('%H:%M') %>:
-              <%= link_to event.title, event_path(event), class: "underline" %>
+              <%= event.title %>
             </p>
-          <% end %>
+          <% end %>    
         </div>
-      <% end %>
+        <% [:tuesday, :wednesday, :thursday, :friday, :saturday, :sunday].each do |day| %>
+          <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500">
+            <p class="text-lg pb-4"><%= Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).strftime("%A %d.%m") %></p>
+            <% events.where(start_time: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).beginning_of_day..Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).end_of_day).each do |event| %>
+              <p>
+                <%= event.start_time.strftime('%H:%M') %>:
+                <%= link_to event.title, event_path(event), class: "underline" %>
+              </p>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5">
     </div>
   </div>
-  <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5">
-</div>
 <% end %>
