--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,31 +1,37 @@
 <div id="<%= dom_id event %>">
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
     <p>
-      <%= event.type || "Event" %>
+      <%= event.title %>
+    </p>
+  </td>
+
+    <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+    <p>
+      <%= event.kind || "Event" %>
     </p>
   </td>
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
-  <p>
-    <%= event.description %>
-  </p>
+    <p>
+      <%= event.description %>
+    </p>
   </td>
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
-  <p>
-    <%= event.start_time %>
-  </p>
+    <p>
+      <%= event.start_time %>
+    </p>
   </td>
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
-  <p>
-    <%= event.duration %>
-  </p>
+    <p>
+      <%= event.duration %>
+    </p>
   </td>
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
-  <p>
-    <%= event.fixed %>
-  </p>
+    <p>
+      <%= event.fixed %>
+    </p>
   </td>
 </div>
