--- a/app/views/events/_view_today.html.erb
+++ b/app/views/events/_view_today.html.erb
@@ -2,7 +2,8 @@
   <table class="border-collapse table-auto w-full text-sm">
     <thead>
       <tr>
-        <th class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Type</th>
+        <th class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Title</th>
+        <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Kind</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Description</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Start time</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Duration</th>
@@ -19,7 +20,7 @@
           <td class="border-b border-slate-100 dark:border-slate-700 p-4">
             <%= Date.today.to_date %> (KW <%= Date.today.strftime('%V') %>)
           </td>
-          <% 4.times do %>
+          <% 5.times do %>
             <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
             </td>
           <% end %>
@@ -35,7 +36,7 @@
               <td class="border-b border-slate-100 dark:border-slate-700 p-4">
                 <%= event.start_time.to_date %> (KW <%= event.start_time.strftime('%V') %>)
               </td>
-              <% 4.times do %>
+              <% 5.times do %>
                 <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
                 </td>
               <% end %>
