--- a/app/views/events/_view_today.html.erb
+++ b/app/views/events/_view_today.html.erb
@@ -26,29 +26,41 @@
           <% end %>
         </div>
       </tr>
-      <% events.each_with_index do |event, i| %> 
-        <% if event.start_time >= event.start_time.beginning_of_day && @events[i-1].start_time < event.start_time.beginning_of_day %>
-          <tr class=" bg-sky-500/100">
-            <div class="my-2 bg-sky-500/100">
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-black text-xl">
-                <%= event.start_time.strftime("%A") %>
-              </td>
-              <td class="border-b border-slate-100 dark:border-slate-700 p-4">
-                <%= event.start_time.to_date %> (KW <%= event.start_time.strftime('%V') %>)
-              </td>
-              <% 5.times do %>
-                <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
+      <% if events.where("start_time > ?", Date.today.beginning_of_day).present? %>
+        <% events.where("start_time > ?", Date.today.beginning_of_day).each_with_index do |event, i| %> 
+          <% if event.start_time >= event.start_time.beginning_of_day && @events[i-1].start_time < event.start_time.beginning_of_day %>
+            <tr class=" bg-sky-500/100">
+              <div class="my-2 bg-sky-500/100">
+                <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-black text-xl">
+                  <%= event.start_time.strftime("%A") %>
                 </td>
-              <% end %>
+                <td class="border-b border-slate-100 dark:border-slate-700 p-4">
+                  <%= event.start_time.to_date %> (KW <%= event.start_time.strftime('%V') %>)
+                </td>
+                <% 5.times do %>
+                  <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
+                  </td>
+                <% end %>
+              </div>
+            </tr>
+          <% end %>
+          <tr>
+            <div class="my-2">
+              <%= render event %>
+              <td class="border-b border-slate-100 dark:border-slate-700 p-4 pr-8 text-slate-500 dark:text-slate-400">
+                <p>
+                  <%= link_to "Show this event", event %>
+                </p>
+              </td>
             </div>
           </tr>
         <% end %>
+      <% else %>
         <tr>
           <div class="my-2">
-            <%= render event %>
-            <td class="border-b border-slate-100 dark:border-slate-700 p-4 pr-8 text-slate-500 dark:text-slate-400">
+            <td class="p-8 text-slate-500 dark:text-slate-400">
               <p>
-                <%= link_to "Show this event", event %>
+                Keine Einträge vorhanden
               </p>
             </td>
           </div>
