mark the current day

--- a/app/views/events/_view_this_month.html.erb
+++ b/app/views/events/_view_this_month.html.erb
@@ -5,7 +5,7 @@
     <div class="pb-4 text-xl"><%= Date.today.strftime("%B") %></div>
     <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
       <% Time.days_in_month(Time.now.month, Time.now.year).times do |i| %>
-        <div class="p-4 rounded-lg shadow-lg bg-white text-slate-700">
+        <div class="p-4 rounded-lg shadow-lg <%= Date.today.day == i ? 'bg-fuchsia-500' : 'bg-white text-slate-700' %>">
           <p class="text-lg pb-4"><%= Date.new(Time.now.year, Time.now.month, i+1).strftime("%A %d.%m") %></p>
           <% events.where(start_time: Date.new(Time.now.year, Time.now.month, i+1).beginning_of_day..Date.new(Time.now.year, Time.now.month, i+1).end_of_day).each do |event| %>
             <p>
