--- a/app/views/events/_view_this_month.html.erb
+++ b/app/views/events/_view_this_month.html.erb
@@ -10,7 +10,7 @@
           <% events.where(start_time: Date.new(Time.now.year, Time.now.month, i+1).beginning_of_day..Date.new(Time.now.year, Time.now.month, i+1).end_of_day).each do |event| %>
             <p>
               <%= event.start_time.strftime('%H:%M') %>:
-              <%= event.title %>
+              <%= link_to event.title, event_path(event), class: "underline" %>
             </p>
           <% end %>
         </div>
@@ -34,7 +34,7 @@
             <% events.where(start_time: Date.new(Time.now.year, number_of_month, i+1).beginning_of_day..Date.new(Time.now.year, number_of_month, i+1).end_of_day).each do |event| %>
               <p>
                 <%= event.start_time.strftime('%H:%M') %>:
-                <%= event.title %>
+                <%= link_to event.title, event_path(event), class: "underline" %>
               </p>
             <% end %>
           </div>
