write current view into session

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -34,12 +34,14 @@
   </div>
 </div>
 
-<% if @view == "view_today" %>
+<% if session[:current_view] == "view_today" %>
   <%= render "view_today", events: @events %>
-<% elsif @view == "view_this_week" %>
+<% elsif session[:current_view] == "view_this_week" %>
   <%= render "view_this_week", events: @events %>
-<% elsif @view == "view_this_month" %>
+<% elsif session[:current_view] == "view_this_month" %>
   <%= render "view_this_month", events: @events %>
-<% elsif @view == "view_this_year" %>
+<% elsif session[:current_view] == "view_this_year" %>
   <%= render "view_this_year", events: @events %>
+<% else %>
+  <%= render "view_this_week", events: @events %>
 <% end %>
