--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -66,7 +66,7 @@
     </tbody>
 </table>
 
-<%= link_to events_path do %>
+<%= link_to events_path(current_view: session[:current_view]) do %>
   <button class="bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded mt-12">
     Zurück zum Kalender
   </button>
