--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,9 +1,16 @@
 <div id="<%= dom_id event %>">
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
-    <p>
-      <%= event.title %>
-    </p>
+    <div class="flex">
+      <p class="mr-2 text-lg">
+        <%= event.title %>              
+      </p>
+      <% if event.done == true %>
+        <span class="material-symbols-outlined">check_circle</span>
+      <% end %>
+    </div>
   </td>
+
+            
 
     <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p>
